--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
     "boom": "^4.2.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
+    "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cross-env": "2.0.1",
+    "dotenv": "^2.0.0",
     "eslint-config-standard": "^6.0.0",
     "express": "^4.13.4",
+    "express-session": "^1.14.2",
     "helmet": "^2.0.0",
     "history": "^4.0.0",
     "hpp": "^0.2.0",
@@ -45,6 +49,8 @@
     "mongoose": "^4.7.0",
     "morgan": "^1.6.1",
     "opn": "^4.0.2",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "react": "^15.2.1",
     "react-dom": "^15.2.1",
     "react-helmet": "^3.1.0",
