--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "react": "^15.2.1",
+    "react-cookie": "^1.0.3",
     "react-dom": "^15.2.1",
     "react-helmet": "^3.1.0",
     "react-redux": "^4.4.0",
