--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^15.2.1",
     "react-cookie": "^1.0.3",
     "react-dom": "^15.2.1",
+    "react-grid-system": "^2.0.2",
     "react-helmet": "^3.1.0",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
