--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-helmet": "^3.1.0",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
+    "react-stripe-checkout": "^2.2.5",
     "redial": "^0.4.1",
     "redux": "^3.3.1",
     "redux-form": "^6.2.0",
