--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-standard": "^6.0.0",
     "express": "^4.13.4",
     "express-session": "^1.14.2",
+    "fbgraph": "^1.3.0",
     "helmet": "^2.0.0",
     "history": "^4.0.0",
     "hpp": "^0.2.0",
@@ -65,6 +66,8 @@
     "redux-logger": "^2.7.4",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.1.0",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "source-map-support": "^0.4.0",
     "standard": "^8.0.0",
     "standard-loader": "^5.0.0",
