--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "history": "^4.0.0",
     "hpp": "^0.2.0",
     "json-loader": "^0.5.4",
+    "moment": "^2.17.1",
     "mongoose": "^4.7.0",
     "morgan": "^1.6.1",
     "opn": "^4.0.2",
