--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.14.2",
     "boom": "^4.2.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "cross-env": "2.0.1",
     "dotenv": "^2.0.0",
+    "enzyme": "^2.6.0",
     "eslint-config-standard": "^6.0.0",
     "express": "^4.13.4",
     "express-session": "^1.14.2",
@@ -54,6 +56,7 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "react": "^15.2.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-cookie": "^1.0.3",
     "react-dom": "^15.2.1",
     "react-grid-system": "^2.0.2",
