--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bluebird": "^3.4.6",
     "body-parser": "^1.14.2",
     "boom": "^4.2.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "connect-ensure-login": "^0.1.1",
@@ -54,6 +55,7 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "react": "^15.2.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-cookie": "^1.0.3",
     "react-dom": "^15.2.1",
     "react-grid-system": "^2.0.2",
@@ -82,6 +84,7 @@
     "babel-plugin-istanbul": "^2.0.0",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
+    "enzyme": "^2.6.0",
     "mocha": "^3.0.2",
     "nyc": "^8.1.0"
   },
