--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "body-parser": "^1.14.2",
     "boom": "^4.2.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^6.0.0",
     "chalk": "^1.1.3",
     "compression": "^1.6.2",
     "connect-ensure-login": "^0.1.1",
